test/constBlockConsuming8.slq

def main(){
	a:=H(0:ğ”¹);
	if a{ a:=H(a); } // error
	return a;
}
